Handle Duplicate keys, base resource resolution, extra check for isCodeSystemSupported